<resources>
    <string name="app_name">PetsLovers</string>
    <string name="correoLogin">Correo</string>
    <string name="contrasenaLogin">Contraseña</string>
    <string name="registroLogin">Registro</string>
    <string name="ingresarLogin">Ingresar</string>
    <string name="errorSesion">Error al Iniciar sesión</string>
    <string name="novalido">Usuario o Contraseña no validos</string>
    <string name="nombreRegistro">Nombre</string>
    <string name="ApellidoRegistro">Apellido</string>
    <string name="correoRegistro">Correo</string>
    <string name="contrasenaRegistro">Contraseña</string>
    <string name="accionRegistro">Registrarse</string>
    <string name="title_activity_main">PetsLovers</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Pets Lovers</string>
    <string name="nav_header_subtitle">petsloverapp@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="VentaAdopcion">Store</string>
    <string name="search">Search</string>
    <string name="profile">My Profile</string>
    <string name="loginManual">http://192.163.185.62:8080/loginUsuario</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="veterinarias">Veterinarias</string>
    <string name="paseadores">Paseadores</string>
    <string name="alimento">Alimento</string>
    <string name="estilistas">Estilistas</string>
    <string name="name_saler">Gian Guatibonza</string>
    <string name="city_sale">BUCARAMANGA</string>
    <string name="price_sale">$ 150.000</string>
    <string name="ip">192.168.1.13</string>
    <string-array name="animales">
        <item>Perro</item>
        <item>Gato</item>
        <item>Tortuga</item>
        <item>Conejo</item>
        <item>Ratón</item>
    </string-array>
    <string-array name="raza">
        <item>Pitbull</item>
        <item>San bernardo</item>
        <item>Labrador</item>
        <item>Pastor Aleman</item>
        <item>otra</item>
    </string-array>
    <string-array name="ciudad">
        <item>Bucaramanga</item>
        <item>Bogotá</item>
        <item>Cali</item>
        <item>Medellín</item>
        <item>otra</item>
    </string-array>
    <string-array name="depto">
        <item>Santander</item>
        <item>Cundinamarca</item>
        <item>Valle del Cauca</item>
        <item>Antioquia</item>
        <item>otra</item>
    </string-array>
</resources>