<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroActivity">


    <android.support.v7.widget.CardView
        android:id="@+id/card_registro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="10dp"
        app:cardElevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".35"
                    android:fontFamily="@font/magnificent"
                    android:gravity="center"
                    android:text="@string/nombreRegistro"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/nombreRegistro"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".65"
                    android:inputType="text"
                    android:nextFocusDown="@id/apellidoRegistro" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".35"
                    android:fontFamily="@font/magnificent"
                    android:gravity="center"
                    android:text="@string/ApellidoRegistro"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/apellidoRegistro"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".65"
                    android:inputType="text"
                    android:nextFocusDown="@id/correoRegistro" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".35"
                    android:fontFamily="@font/magnificent"
                    android:gravity="center"
                    android:text="@string/correoRegistro"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/correoRegistro"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".65"
                    android:inputType="textEmailAddress"
                    android:nextFocusDown="@string/contrasenaRegistro" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".35"
                    android:fontFamily="@font/magnificent"
                    android:gravity="center"
                    android:text="@string/contrasenaRegistro"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/contrasenaRegistro"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".65"
                    android:inputType="textPassword" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".35"
                    android:fontFamily="@font/magnificent"
                    android:gravity="center"
                    android:text="@string/contrasenaRegistro"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/contrasena2Registro"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".65"
                    android:inputType="textPassword" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/fotoRegistro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="10dp"
                    android:backgroundTint="@color/colorCafesito"
                    android:src="@drawable/ic_camera_alt_black_36dp" />


                <Button
                    android:id="@+id/registrar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:backgroundTint="@color/colorCafesito"
                    android:enabled="false"
                    android:fontFamily="@font/magnificent"
                    android:text="@string/accionRegistro"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <ImageView
        android:id="@+id/prueba"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:elevation="3dp"
        android:src="@drawable/login_imagen" />


</RelativeLayout>